# my_ai_learning

project3_1/: README.md  environment.yml  faq-llamaindex-faiss-faq-rag-1  pyproject.toml  项目结构说明文档.md
project3_1/app/: config.py  main.py  schemas.py
project3_1/app/rag/: answer.py  index.py
project3_1/app/services/: chat_service.py  faq_service.py
project3_1/app/storage/: json_store.py
project3_1/data/: faqs.json  sessions.json
project3_1/data/faiss_index/: default__vector_store.json  docstore.json  index_store.json
project3_1/faq_rag_mvp.egg-info/: PKG-INFO  SOURCES.txt
project3_1/outputs/: sample_faq.csv
project3_1/tests/: test_api.py  test_chat_service.py  test_faq_consistency.py  test_faq_service.py  test_rag_index.py  test_storage.py
project3_2/: .env.example  README.md  environment.yml  requirements.txt
project3_2/data/: company.txt
project3_2/scripts/: init_neo4j.py
project3_2/src/: __init__.py  bm25_retriever.py  config.py  document_loader.py  embedding.py  generator.py  graph_store.py  models.py  qa.py  relation_extractor.py  scorer.py  tokenization.py
project3_2/tests/: __init__.py  test_config.py  test_graphrag_pipeline.py
project4_1/: .env.example  .gitignore  README.md  requirements.txt
project4_1/src/: __init__.py  app_factory.py  cli.py  config.py  db.py  graph.py  llm.py  rag.py  tools.py
project4_1/tests/: test_customer_service.py
