[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faq-rag-mvp"
version = "0.1.0"
description = "FAQ RAG MVP backend"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true
